painter paints snake