@@ -41,7 +41,7 @@ public class Snake {
         return snakeTail;
     }
 
-    private void changeSnakeLocation(){
+    public void updateSnakeLocation(){
         int deltaX = 0;
         int deltaY = 0;
         if(direction == Direction.LEFT){
@@ -57,9 +57,10 @@ public class Snake {
 
         System.out.println(deltaX + " " + deltaY);
         snakeTail.push(new Point(snakeTail.peek().x + deltaX, snakeTail.peek().y + deltaY));
-        Point tail = snakeTail.remove(0); // remove the tail and add to head
+        Point tail = snakeTail.removeFirst(); // remove the tail and add to head
 
     }
+
 
 }
 
